[package]
name = "eth-aml-pipeline"
version = "0.1.0"
edition = "2021"
authors = ["AML Pipeline Team"]
description = "Ethereum AML data collection and labeling pipeline"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum types and utilities
alloy-primitives = "0.8"
alloy-rpc-types = "0.6"
alloy-provider = "0.6"
alloy-transport-http = "0.6"

# Data processing
polars = { version = "0.45", features = ["parquet", "lazy", "dtype-u8", "strings", "temporal"] }

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# XML parsing for OFAC data
quick-xml = { version = "0.37", features = ["serialize"] }

# CSV parsing
csv = "1.3"

# Rate limiting
governor = "0.7"

# Hex encoding
hex = "0.4"

# Regex for address extraction
regex = "1.11"

# TOML parsing for config files
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "eth-aml-pipeline"
path = "src/main.rs"
